name:           BiobaseTurner
version:        0.3.2.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
Homepage:       https://github.com/choener/BiobaseTurner
bug-reports:    https://github.com/choener/BiobaseTurner/issues
copyright:      Christian Hoener zu Siederdissen, 2010-2015
category:       Bioinformatics
synopsis:       Import Turner RNA parameters
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
description:
                A data structure for Mathews / Turner RNA and DNA energy
                parameters. This library currently only provides an importer,
                not export functions. There are two reasons: (i) We currently
                have no use-case where we need more than import facilities (ii)
                The file structure is geared towards humans, not machines. If
                you need to be able to export, send a mail.
                .
                NOTE This is rather fragile as some files use different index
                enumerations, which we handle rather... simplistically.
                .
                In principle, all parameters should be symmetric regarding the
                stem direction. However, there is one asymmetry case in
                dnastack.dh. We do not fix this problem as we do not change the
                source files.



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base               >= 4.7    && < 4.9
--               , bytestring         >= 0.9
--               , bytestring-lexing  >= 0.4
--               , conduit            >= 0.5
--               , conduit-extra      >= 1.0
--               , resourcet          >= 0.4
               , containers
               , filepath
               , lens               >= 4      && < 5
               , primitive          >= 0.5    && < 0.7
               , split              >= 0.2    && < 0.3
               , vector             >= 0.10   && < 0.11
               , BiobaseXNA         >= 0.9.1  && < 0.9.2
               , PrimitiveArray     >= 0.6.0  && < 0.6.1
               , text               >= 1.0    && < 1.3
               , attoparsec         >= 0.13   && < 0.14
  exposed-modules:
    Biobase.Turner
    Biobase.Turner.Import
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , NoMonomorphismRestriction
                    , OverloadedStrings
                    , PatternGuards
                    , RecordWildCards
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeOperators
  ghc-options:
    -O2 -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
  build-depends: base
               , ADPfusion
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/BiobaseTurner

