name:           BiobaseTurner
version:        0.3.2.1
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
Homepage:       https://github.com/choener/BiobaseTurner
bug-reports:    https://github.com/choener/BiobaseTurner/issues
copyright:      Christian Hoener zu Siederdissen, 2010-2018
category:       Bioinformatics
synopsis:       Import Turner RNA parameters
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 8.0.2, GHC == 8.2.2
description:
                A data structure for Mathews / Turner RNA and DNA energy
                parameters. This library currently only provides an importer,
                not export functions. There are two reasons: (i) We currently
                have no use-case where we need more than import facilities (ii)
                The file structure is geared towards humans, not machines. If
                you need to be able to export, send a mail.
                .
                NOTE This is rather fragile as some files use different index
                enumerations, which we handle rather... simplistically.
                .
                In principle, all parameters should be symmetric regarding the
                stem direction. However, there is one asymmetry case in
                dnastack.dh. We do not fix this problem as we do not change the
                source files.



Extra-Source-Files:
  README.md
  changelog.md
  data/*.par



flag dump-core
  description: Dump HTML for the core generated by GHC during compilation
  default:     False
  manual:      True



library
  build-depends: base                   >= 4.7      && < 5.0
               , aeson                  >= 0.8
               , binary                 >= 0.7
               , bytestring             >= 0.10
               , bytestring-lexing      >= 0.5.0.2
               , cereal                 >= 0.4
               , containers
               , data-default           >= 0.5
               , filepath
               , fused-effects          >= 1.0
               , lens                   >= 4
               , primitive              >= 0.5
               , split                  >= 0.2
               , text                   >= 1.0
               , trifecta               >= 1.6
               , vector                 >= 0.10
               , vector-th-unbox        >= 0.2
               --
               , BiobaseTypes           == 0.1.3.*
               , BiobaseXNA             == 0.11.0.*
               , PrimitiveArray         == 0.9.0.*
               , SciBaseTypes           == 0.0.0.*
  exposed-modules:
    Biobase.Turner
    Biobase.Turner.Default.RNA2004
    Biobase.Turner.Import.Turner
    Biobase.Turner.Import.Vienna
    Biobase.Turner.Model.Vienna
    Biobase.Turner.Types
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveGeneric
                    , DeriveDataTypeable
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoMonomorphismRestriction
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , UnicodeSyntax
  ghc-options:
    -O2 -funbox-strict-fields
  if flag(dump-core)
    build-depends: dump-core
    ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html



executable TurnerConverter
  build-depends: base
               , aeson
               , binary
               , bytestring
               , cereal
               , cmdargs          >= 0.10
               , containers
               , vector
               --
               , BiobaseTurner
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TupleSections
  hs-source-dirs:
    src
  main-is:
    TurnerConverter.hs
  ghc-options:
    -O2 -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
                    , UnicodeSyntax
  build-depends: base
               , data-default
               , HUnit              >= 1.2
               , lens
               , PrimitiveArray
               , QuickCheck
               , tasty              >= 0.11
               , tasty-hunit        >= 0.9
               , tasty-quickcheck   >= 0.8
               , tasty-th           >= 0.1
--               , test-framework               >= 0.8  && < 0.9
--               , test-framework-hunit         >= 0.3  && < 0.4
--               , test-framework-quickcheck2   >= 0.3  && < 0.4
--               , test-framework-th            >= 0.2  && < 0.3
               --
               , BiobaseTurner
               , BiobaseXNA



source-repository head
  type: git
  location: git://github.com/choener/BiobaseTurner

